--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -23,16 +23,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+    - name: Gradle build
+      uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
-        
+        gradle-version: 7.5.0
+    - run: gradle build    
+    
     - name: Get Test Results history
       uses: actions/checkout@v3
       if: always()
