--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -49,7 +49,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         WORKFLOW_ID: main.yml
-        allure_results: allure-results
+        allure_results: build/allure-results
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
