--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -53,6 +53,11 @@ jobs:
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
+        
+    - name: Enforce permission requirement
+      uses: prince-chrismc/check-actor-permissions-action@v2
+      with:
+        permission: write
 
     - name: Deploy report to Github Pages
       if: always()
