--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -41,6 +41,8 @@ jobs:
       with:
         ref: gh-pages
         path: gh-pages
+        persist-credentials: false
+        fetch-depth: 0
 
     - name: Create Test Results History
       uses: PavanMudigonda/allure-html-reporter-github-pages@v1.0
