--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -75,3 +75,9 @@ jobs:
           state: 'success'
           sha: ${{ github.sha }}
           target_url: https://safinalu.github.io/testcontainers-test-gradle/${{ github.run_number }}
+          
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v3.2.0
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/build/test-results/test/TEST-*.xml'
