--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -81,3 +81,11 @@ jobs:
       if: always() # always run even if the previous step fails
       with:
         report_paths: '**/build/test-results/test/TEST-*.xml'
+
+    - name: Test Report - JUnit table
+      uses: dorny/test-reporter@v1.5.0
+      if: success() || failure()    # run this step even if previous step failed
+      with:
+        name: JUnit Test results            # Name of the check run which will be created
+        path: build/test-results/test/TEST-*.xml    # Path to test results
+        reporter: java-junit        # Format of test results
