--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -97,6 +97,6 @@ jobs:
         # WIKI_DIR's default is wiki/
         WIKI_DIR: allure-report/
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GH_MAIL: ${{ secrets.YOUR_EMAIL }}
+        GH_MAIL: ${{ secrets.GH_MAIL }}
         GH_NAME: ${{ github.repository_owner }}
 
