--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -99,4 +99,9 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GH_MAIL: ${{ secrets.GH_MAIL }}
         GH_NAME: ${{ github.repository_owner }}
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: allure-report_${{ github.run_number }}
+        path: allure-report/
 
