--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -107,6 +107,7 @@ jobs:
         path: allure-report/
     - name: HTML Preview
       id: html_preview
+      if: success() || failure() 
       uses: pavi2410/html-preview-action@v2
       with:
         html_file: 'allure-report/aindex.html'
