--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -115,5 +115,5 @@ jobs:
       uses: EnricoMi/publish-unit-test-result-action@v2.0.0-beta.3
       if: always()
       with:
-        files: "test-results/**/*.xml"
+        files: "build/test-results/**/*.xml"
 
