--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'io.qameta.allure' version '2.8.0'
+    //id 'io.qameta.allure' version '2.8.0'
+    id "io.qameta.allure-report" version "2.10.0"
+    id "io.qameta.allure-adapter" version "2.10.0"
 }
 
 group 'com.safina.lyudmila'
@@ -10,7 +12,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'java-library'
-
+apply plugin: "io.qameta.allure-report"
 
 java {
     toolchain {
@@ -32,12 +34,14 @@ dependencies {
     testImplementation group: 'io.qameta.allure', name: 'allure-junit5', version: '2.14.0'
 }
 
-allure {
-
-    aspectjweaver = true
-    autoconfigure = true
-}
-
 test {
     useJUnitPlatform()
+}
+
+allure {
+    adapter {
+        frameworks {
+            junit5
+        }
+    }
 }
