--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -21,6 +21,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Get Time
+      id: time
+      uses: nanzm/get-time-action@v1.1
+      with:
+        timeZone: 0
+        format: 'YYYY-MM-DD-HH-mm-ss'
+    
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -30,14 +37,8 @@ jobs:
     - name: Gradle build
       uses: gradle/gradle-build-action@v2.2.1
       with:
-        gradle-version: current
+        gradle-version: 7.4.2
     - run: gradle build    
-    - name: Get Time
-      id: time
-      uses: nanzm/get-time-action@v1.1
-      with:
-        timeZone: 0
-        format: 'YYYY-MM-DD-HH-mm-ss'
 
     - name: Gradle generate allure report
       uses: gradle/gradle-build-action@v2.2.1
