--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -35,12 +35,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Gradle build
-    - uses: gradle/gradle-build-action@v2.2.1
+      uses: gradle/gradle-build-action@v2.2.1
       with:
         gradle-version: 7.4.2
         arguments: build   
+        
     - name: Gradle generate allure report
-    - uses: gradle/gradle-build-action@v2.2.1
+      uses: gradle/gradle-build-action@v2.2.1
       with:
         gradle-version: 7.4.2
         arguments: allureReport
