--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
+import com.pswidersk.gradle.python.VenvTask
+
 plugins {
     id 'java'
     id 'idea'
-    //id 'io.qameta.allure' version '2.8.0'
     id "io.qameta.allure-report" version "2.10.0"
-    id "io.qameta.allure-adapter" version "2.10.0"
+    id "com.pswidersk.python-plugin" version "2.1.0"
+}
+
+pythonPlugin {
+    pythonVersion.set("3.10.4")
 }
 
 group 'com.safina.lyudmila'
@@ -13,6 +18,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'java-library'
 apply plugin: "io.qameta.allure-report"
+apply plugin: "com.pswidersk.python-plugin"
 
 java {
     toolchain {
@@ -38,10 +44,20 @@ test {
     useJUnitPlatform()
 }
 
-allure {
-    adapter {
-        frameworks {
-            junit5
-        }
+tasks {
+    task(pipInstallAllureCombine, type: VenvTask) {
+        venvExec = "pip"
+        args = ["install", "--isolated", "allure-combine"]
+    }
+
+    task(runGenerateAllureHtml, type: VenvTask) {
+        workingDir = file("src/python")
+        args = ["generate_allure_html_report.py"]
+        environment =
+                [
+                    "PATH_TO_ALLURE_REPORT": projectDir.getAbsolutePath() + "/build/reports/allure-report/allureReport",
+                    "PATH_TO_RESULT": projectDir.getAbsolutePath() + "/build/reports/allure-html"
+                ]
+        dependsOn(pipInstallAllureCombine)
     }
 }
